[package]
name = "cpr_bfvm"
description = "A brainfuck interpreter"
license = "GPL-3.0"
version.workspace = true
authors.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
log = { version = "0.4.21", features = ["std", "release_max_level_info"] }
clap = { version = "4.5.2", features = ["derive"] }
cpr_bf.workspace = true
simple_logger = { version = "4.3.3", features = ["stderr"] }
